Add items into header; Add smooth scrooling effects; reorganize file structure

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -18,7 +18,7 @@
         </p>
         <footer>
             <ul class="buttons vertical">
-                <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+                <li><a href="/about.html" class="button fit scrolly">Tell Me More</a></li>
             </ul>
         </footer>
 
