--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,26 +3,18 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="/">Welcome</a></li>
-                        <li><a href="/blog.html">Blog</a></li>
+            <li><a href="#about">About us</a></li>
+						<li><a href="#services">Services</a></li>
+						<li><a href="#staff">Staff</a></li>
 						<li class="submenu">
-							<a href="">Layouts</a>
+							<a href="">Links</a>
 							<ul>
-								<li><a href="/left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="/right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="/no-sidebar.html">No Sidebar</a></li>
-								<li><a href="/contact.html">Contact</a></li>
-								<li class="submenu">
-									<a href="">Submenu</a>
-									<ul>
-										<li><a href="#">Dolore Sed</a></li>
-										<li><a href="#">Consequat</a></li>
-										<li><a href="#">Lorem Magna</a></li>
-										<li><a href="#">Sed Magna</a></li>
-										<li><a href="#">Ipsum Nisl</a></li>
-									</ul>
-								</li>
+								<li><a href="https://ifar-shiny.hsl.harvard.edu/">Shiny Site</a></li>
+								<li><a href="https://ifar-edc.hsl.harvard.edu/redcap">REDCap</a></li>
+								<li><a href="https://ifar-wikis.hsl.harvard.edu">Wiki</a></li>
 							</ul>
 						</li>
+						<li><a href="/blog.html">News</a></li>
 					</ul>
 				</nav>
 			</header>
