adding service descriptions;fix news updates

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,15 +10,14 @@
     <div class="inner">
 
         <header>
-            <h2>IFAR BioStats</h2>
+            <h2>BioStats Core</h2>
         </header>
-        <p><strong>Biostats</strong> and <strong>Clinical Trial</strong> Core <br>
-        At<br>
-        Institute for <strong>Aging</strong> Research
-        </p>
+        <p>Biostats and Clinical Trial Program<br>
+          AT<br>
+          Institute for <strong>Aging</strong> Research</p>
         <footer>
             <ul class="buttons vertical">
-                <li><a href="/about.html" class="button fit scrolly">Tell Me More</a></li>
+                <li><a href="/#about" class="button fit scrolly">Tell Me More</a></li>
             </ul>
         </footer>
 
