--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,9 @@
     </ul>
 
     <ul class="copyright">
-        <li>&copy; IFAR BioStats Core, 2015 </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>&copy; IFAR BioStats Core, 2015 </li>
+        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>Photo: <a href="mailto:haozhu@hsl.harvard.edu">Hao Zhu</a></li>
     </ul>
 
 </footer>
