--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,19 +2,19 @@
 				<h1 id="logo"><a href="/"><i class="icon-hsl"></i> Biostats Core <span>at Institute for Aging Research</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="/">Welcome</a></li>
-            <li><a href="#about">About us</a></li>
-						<li><a href="#services">Services</a></li>
-						<li><a href="#staff">Staff</a></li>
+						<li><a href="/#banner">Welcome</a></li>
+            <li><a href="/#about">About us</a></li>
+						<li><a href="/#services">Services</a></li>
+						<!--<li><a href="/#staff">Staff</a></li>-->
 						<li class="submenu">
-							<a href="">Links</a>
+							<a href="">Products</a>
 							<ul>
 								<li><a href="https://ifar-shiny.hsl.harvard.edu/">Shiny Site</a></li>
 								<li><a href="https://ifar-edc.hsl.harvard.edu/redcap">REDCap</a></li>
 								<li><a href="https://ifar-wikis.hsl.harvard.edu">Wiki</a></li>
 							</ul>
 						</li>
-						<li><a href="/blog.html">News</a></li>
+						<li><a href="/news.html">News</a></li>
 					</ul>
 				</nav>
 			</header>
