--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,11 +10,16 @@
     <div class="inner">
 
         <header>
-            <h2>BioStats Core</h2>
+            <h2>IFAR BioStats Core</h2>
         </header>
-        <p>Biostats and Clinical Trial Program<br>
+        <p>The Biostatics and Clinical Trials Program<br>
           AT<br>
-          Institute for <strong>Aging</strong> Research</p>
+          The Hebrew SeniorLife Institute for <strong>Aging</strong> Research
+          <br> AND <br>
+          The Boston Pepper Center
+          <br> <br>
+          Harvard Medical School
+          <br> Roslindale, MA </p>
         <footer>
             <ul class="buttons vertical">
                 <li><a href="/#about" class="button fit scrolly">Tell Me More</a></li>
