--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,12 +12,11 @@
         <header>
             <h2>IFAR BioStats Core</h2>
         </header>
-        <p>The Biostatics and Clinical Trials Program<br>
+        <p>
           AT<br>
-          The Hebrew SeniorLife Institute for <strong>Aging</strong> Research
+          The Hebrew SeniorLife <br> Institute for Aging Research
           <br> AND <br>
           The Boston Pepper Center
-          <br> <br>
           Harvard Medical School
           <br> Roslindale, MA </p>
         <footer>
