--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,12 +12,9 @@
         <header>
             <h2>IFAR BioStats Core</h2>
         </header>
-        <p>
-          AT<br>
-          The Hebrew SeniorLife <br> Institute for Aging Research
-          <br> AND <br>
-          The Boston Pepper Center
-          Harvard Medical School
+        <p> Biostatistics and Clinical Trials
+          AT <br> <strong> The Institute for Aging Research </strong> <br> AND <br> The Boston Pepper Center
+          <br> <br> Hebrew Seniorlife
           <br> Roslindale, MA </p>
         <footer>
             <ul class="buttons vertical">
