--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -13,7 +13,7 @@
             <h2>IFAR BioStats Core</h2>
         </header>
         <p> Biostatistics and Clinical Trials
-          AT <br> <strong> The Institute for Aging Research </strong> <br> AND <br> The Boston Pepper Center
+          <br> <br> AT <br> <br> <strong> The Institute for Aging Research </strong> <br> AND <br> <strong>  The Boston Pepper Center </strong>
           <br> <br> Hebrew Seniorlife
           <br> Roslindale, MA </p>
         <footer>
