Change banner layout a bit

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,12 +10,14 @@
     <div class="inner">
 
         <header>
-            <h2>IFAR BioStats Core</h2>
+            <h2 style="font-size: 1.7em;"><i class="icon-hsl"></i> IFAR BioStats Core</h2>
         </header>
-        <p> Biostatistics and Clinical Trials
-           <br> AT  <br> <strong> The Institute for Aging Research </strong> <br> AND <br> <strong>  The Boston Pepper Center </strong>
-          <br> <br> Hebrew Seniorlife
-          <br> Roslindale, MA </p>
+        <p> Biostatistics and Clinical Trials<br>
+          AT <br>
+          <a href="http://www.instituteforagingresearch.org/" style="border-bottom: double 0px"><strong>The Institute for Aging Research</strong></a><br>
+          AND <br>
+          <a href="http://www.bostonpeppercenter.org/" style="border-bottom: double 0px"><strong>The Boston Pepper Center</strong></a><br>
+          <hr> Hebrew Seniorlife&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Roslindale, MA </p>
         <footer>
             <ul class="buttons vertical">
                 <li><a href="/#about" class="button fit scrolly">Tell Me More</a></li>
