--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,14 @@
 	}
 
 	hr {
-		border-top: solid 1px rgba(124, 128, 129, 0.2);
-		border: 0;
-		margin-bottom: 1.5em;
-	}
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+  }
 
 	blockquote {
 		border-left: solid 0.5em rgba(124, 128, 129, 0.2);
