Change wiki to core wiki

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
 							<ul>
 								<li><a href="https://ifar-shiny.hsl.harvard.edu/">Shiny Site</a></li>
 								<li><a href="https://ifar-edc.hsl.harvard.edu/redcap">REDCap</a></li>
-								<li><a href="https://ifar-wikis.hsl.harvard.edu">Wiki</a></li>
+								<li><a href="https://ifar-wikis.hsl.harvard.edu">Core Wiki</a></li>
 							</ul>
 						</li>
 						<li><a href="/news.html">News</a></li>
