--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 						<li><a href="/#banner">Welcome</a></li>
             <li><a href="/#about">About us</a></li>
 						<li><a href="/#services">Services</a></li>
-						<!--<li><a href="/#staff">Staff</a></li>-->
+						<li><a href="/#team">Team</a></li>
 						<li class="submenu">
 							<a href="">Products</a>
 							<ul>
