--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-				<h1 id="logo"><a href="/"><i class="icon-hsl"></i> Biostats Core <span>at Institute for Aging Research</span></a></h1>
+				<h1><a href="/"><i class="icon-hsl"></i> Biostats Core <span>at Institute for Aging Research</span></a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="/#banner">Welcome</a></li>
@@ -9,6 +9,7 @@
 						<li class="submenu">
 							<a href="">Products</a>
 							<ul>
+								<li><a href="/instructions.html">Instructions (alpha)</a></li>
 								<li><a href="https://ifar-shiny.hsl.harvard.edu/">Shiny Site</a></li>
 								<li><a href="https://ifar-edc.hsl.harvard.edu/redcap">REDCap</a></li>
 								<li><a href="https://ifar-wikis.hsl.harvard.edu">Core Wiki</a></li>
