--- a/_layouts/toc.html
+++ b/_layouts/toc.html
@@ -11,7 +11,7 @@
       </div>
         {{ content }}
     </div>
-    {% include footer.html %}
+    {% include footer-short.html %}
   <script type="text/javascript">
   $(document).ready(function() {
       $('.toc').toc();
