add printhide to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header id="header">
+<header id="header", class="printhide">
 				<h1><a href="/"><i class="icon-hsl"></i> Biostats Core <span>at Institute for Aging Research</span></a></h1>
 				<nav id="nav">
 					<ul>
