Adding Tom's guide

--- a/_layouts/post-toc.html
+++ b/_layouts/post-toc.html
@@ -5,9 +5,9 @@ layout: toc
     <article>
   <header class="special container 6u">
     <h2 class="post-title">{{ page.title }}</h2>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} by: {{ page.author }}{% endif %}</p>
+    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}<br>{% if page.author %} by: {{ page.author }}{% endif %}</p>
   </header>
-  <section class="style1 wrapper container small">
+  <section class="style3 wrapper container small">
     {{ content }}
   </section>
 
