--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-    <title>{% if page.title %}{{ page.title | replace:'<br />','' }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.title %}{{ page.title | replace:'<br>','' }}{% else %}{{ site.title }}{% endif %}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="" />
@@ -19,7 +19,6 @@
     <script src="/js/skel-layers.min.js"></script>
     <script src="/js/init.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/smoothscroll.js"></script>
     <link rel="stylesheet" href="/icomoon/style.css">
     <link href="/images/logo.ico" rel="shortcut icon">
     <noscript>
