change intruction page ui

--- a/_layouts/toc.html
+++ b/_layouts/toc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {% include head-toc.html %}
 
   <body data-spy="scroll" data-target=".toc" data-offset="20">
     {% include header.html %}
