--- a/_includes/head-toc.html
+++ b/_includes/head-toc.html
@@ -30,5 +30,6 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="/css/toc-print.css" media="print" type="text/css">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
