--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
 /* Basic */
 
-
 body, #skel-layers-wrapper {
 	background: #f3f6fa;
 }
@@ -1121,20 +1120,21 @@ body.index #main {
 /* Glyph, by Harry Roberts */
 
 hr.style-section {
-	padding: 0;
-	border: none;
-	border-top: medium double #333;
-	color: #333;
-	text-align: center;
+  height: 30px;
+  border-style: solid;
+  border-color: #8c8b8b;
+  border-width: 1px 0 0 0;
+  border-radius: 20px;
 }
-hr.style-section:after {
-	content: "§";
-	display: inline-block;
-	position: relative;
-	top: -0.7em;
-	font-size: 1.5em;
-	padding: 0 0.25em;
-	background: white;
+hr.style-section:before {
+  display: block;
+  content: "";
+  height: 30px;
+  margin-top: -31px; 
+  border-style: solid;
+  border-color: #8c8b8b;
+  border-width: 0 0 1px 0;
+  border-radius: 20px;
 }
 
 .img-circle {
